# barter

./: .gitignore  README.md  example.env  pyproject.toml  run.sh
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
api/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_investmentcheck.py  0003_remove_investmentcheck_result_and_more.py  0004_synchistory.py  0005_synchistory_records_synced.py  0006_synchistory_sync_type.py  0007_synchistory_extra_data.py  0008_instrument_enable_dydx_trades_position.py  0009_instrument_dydx_market_id.py  0010_rename_instrumentohlc_coingeckoinstrumentohlc_and_more.py  0011_settings.py  0012_alter_synchistory_sync_type.py
api/services/: dydx_models.py  dydx_trader.py  linear.py  positions.py  sync.py  trade_evaluator.py
config/: __init__.py  asgi.py  celery_debug.py  settings.py  tasks.py  urls.py
fixtures/: dydx_candles.json  instruments.json
scripts/: cron.py
templates/: base.html  check.html
