[tool.poetry]
name = "barter"
version = "0.1.0"
description = ""
authors = ["John Smith <john@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.4"
django-structlog = "^4.0.1"
python-dotenv = "^0.21.1"
django-cors = "^0.1"
django-cors-headers = "^3.13.0"
django-stubs = "^1.14.0"
djangorestframework-stubs = "^1.8.0"
dj-database-url = "^1.2.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
psycopg2 = "^2.9.5"
whitenoise = "^6.3.0"
pre-commit = "^3.1.1"
ruff = "^0.0.254"
django-import-export = "^3.1.0"
pandas = "^2.0.0"
celery = "^5.2.7"
web3 = "^6.2.0"
django-model-utils = "^4.3.1"
dateparser = "^1.1.8"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest = "^7.2.1"
black = "^22.12.0"
pytest-django = "^4.5.2"
django-filter = "^23.2"

[tool.ruff]
ignore = ["E501", "E402"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
